<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed by Keivan Kiyanfar on 10/9/18 9:48 PM
  ~ Last modified 10/9/18 9:48 PM
  ~ Copyright (c) 2018. All rights reserved.
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <RelativeLayout
        android:id="@+id/constLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Mobile for Sign-in"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName|textWebEmailAddress"
            />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
           />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Mobile ex) +82010~~"
            android:inputType="textPersonName"
           />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="500dp"
            android:layout_marginEnd="8dp"
            android:text="회원가입"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbAgree" />

        <EditText
            android:id="@+id/etRepeatPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/RepeatPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPass" />

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="8dp"
            android:text="@string/AgreeTerms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRepeatPass" />

        <EditText
            android:id="@+id/etConfCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/ConfCode"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="8dp"
            android:text="인증코드확인"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfCode" />

    </RelativeLayout>

</ScrollView>